--- a/BullsEyeApp/BullsEyeApp.csproj
+++ b/BullsEyeApp/BullsEyeApp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="GameForm.Designer.cs">
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsForm.cs">
