--- a/BullsEyeLogic/BullsEyeLogic.csproj
+++ b/BullsEyeLogic/BullsEyeLogic.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Feedback.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
